# GrowthStore

./: .gitignore  Cargo.toml  README.md  build.cmd  build.sh
.github/workflows/: npm-grunt.yml  rust.yml
chimes-dbs-factory/: Cargo.toml
chimes-dbs-factory/src/: lib.rs
chimes-starter/: Cargo.toml  storex.share
chimes-starter/assets/configs/: Services.toml
chimes-starter/src/: config.rs  main.rs  proc.rs
chimes-store-core/: Cargo.toml
chimes-store-core/src/: lib.rs
chimes-store-core/src/config/: auth.rs  mod.rs
chimes-store-core/src/dbs/: probe.rs
chimes-store-core/src/docs/: openapi.rs
chimes-store-core/src/service/: files.rs  invoker.rs  mod.rs  mx.rs  perfs.rs  plugin.rs  queue.rs  registry.rs  sched.rs  script.rs  sdk.rs  starter.rs
chimes-store-core/src/utils/: algorithm.rs  crypto.rs  executor.rs  global_data.rs  mod.rs  redis.rs  response.rs
chimes-store-dbs/: Cargo.toml  codebase.md
chimes-store-dbs/src/: docs.rs  lib.rs
chimes-store-dbs/src/api/: crud.rs  mod.rs  redis.rs
chimes-store-dbs/src/dbs/: crud.rs  invoker.rs  mod.rs  query.rs  redis.rs
chimes-store-dbs/src/utils/: mod.rs
chimes-store-macro/: Cargo.toml
chimes-store-macro/src/: lib.rs
chimes-store-macro/src/form_schema/: attrs.rs  generator.rs  mod.rs
chimes-store-macro/src/utils/: mod.rs  parse_utils.rs
chimes-store-server/: .gitignore  Cargo.toml  README.md  README_zh.md  build.rs
chimes-store-server/assets/configs/: Authorization.toml  Config.toml
chimes-store-server/assets/metadata/com.siline/object/: User.json
chimes-store-server/assets/metadata/compose/: schema.json
chimes-store-server/assets/metadata/weixin/: schema.json
chimes-store-server/assets/models/: Chimes.toml  User.toml  rivermap.toml  tenda.toml
chimes-store-server/assets/models/com.siline/: kafka.pltoml  mqtt.pltoml  rivermap.pltoml  stayhere.pltoml  weixin.pltoml  wtst.pltoml
chimes-store-server/assets/models/com.siline.chimes/: mqtt.pltoml
chimes-store-server/assets/models/com.siline.rivermap/: callback.pltoml  synctask.pltoml
chimes-store-server/src/: auth_service.rs  config.rs  main.rs  manager.rs  plugin.rs  salvo_main.rs
chimes-store-server/src/api/: auth.rs  common.rs  management.rs  mod.rs  performance.rs  tools.rs
chimes-store-server/src/utils/: change_case.rs  global_data.rs  linux_performance.rs  mod.rs  performance.rs  windows_performance.rs  zip.rs
chimes-store-utils/: Cargo.toml
chimes-store-utils/src/: algorithm.rs  crypto.rs  lib.rs  template.rs
front/: .env.development  .env.production  .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
front/public/: SERVICE-AGGREEMENT  SERVICE-LICENSE-APACHE  SERVICE-PERSONAL-PRIVACY
front/src/: App.vue  main.ts
front/src/assets/iconfont/: iconfont.css
front/src/assets/models/: star.glb  xz.glb
front/src/components/SvgIcon/: index.vue
front/src/components/icon/: index.vue
front/src/components/icon/svg/: index.vue
front/src/config/: config.ts  piniaPersist.ts
front/src/enums/: httpEnum.ts
front/src/http/: axios.ts  axios_api.ts  axios_direct.ts  index.ts
front/src/http/interface/: index.ts
front/src/http/modules/: common.ts  login.ts  management.ts  performance.ts  tools.ts  user.ts
front/src/i18n/: index.ts
front/src/i18n/modules/: en.ts  zh.ts
front/src/json/: menu.json
front/src/layouts/: index.vue
front/src/layouts/LayoutColumn/: index.scss  index.vue
front/src/layouts/LayoutRow/: index.scss  index.vue
front/src/layouts/components/Header/: index.scss  index.vue
front/src/layouts/components/Main/: index.vue
front/src/layouts/components/Menu/: subMenu.vue
front/src/layouts/components/tabs/: index.vue
front/src/routers/: index.ts
front/src/routers/modules/: dynamicRouter.ts  staticRouter.ts
front/src/stores/: index.ts
front/src/stores/interface/: index.ts
front/src/stores/modules/: menu.ts
front/src/style/: index.scss  theme.scss
front/src/typings/: global.d.ts  plugins.d.ts
front/src/utils/: codetemplate.ts  common.ts  datetime.js  encryption.ts  utils.ts
front/src/views/Assembly/formPro/: index.vue
front/src/views/Assembly/tablePro/: index.scss  index.vue
front/src/views/Dashboard/: CpuLineChart.vue  InvokeUriSummary.vue  LineChart.vue  MemLineChart.vue  PanelGroup.vue  TaskLineChart.vue
front/src/views/Dashboard/mixins/: resize.js
front/src/views/Error/: 404.vue  500.vue
front/src/views/Home/: index.scss  index.vue
front/src/views/Login/: contact.vue  index.scss  index.vue  license.vue
front/src/views/StoreX/Authorization/: add_appsecret.vue  index.scss  index.vue
front/src/views/StoreX/Config/: index.vue
front/src/views/StoreX/Elasticsearch/: index.vue
front/src/views/StoreX/Invoker/: index.scss  index.vue
front/src/views/StoreX/Login/: index.scss  index.vue
front/src/views/StoreX/Namespaces/: add_hook.vue  add_plugin.vue  add_schema.vue  es_panel.vue  (+11 more)
front/src/views/Tools/: connection.vue  index.scss  jsonpath.vue  rhai.vue  tera.vue
store-plugin-compose/: Cargo.toml  README.md  README_zh.md
store-plugin-compose/src/: lib.rs
store-plugin-compose/src/api/: mod.rs
store-plugin-compose/src/proc/: compose_plugin.rs  fileparts.rs  mod.rs
store-plugin-kafka/: Cargo.toml
store-plugin-kafka/src/: lib.rs
store-plugin-kafka/src/api/: mod.rs
store-plugin-kafka/src/proc/: kafka_plugin.rs  mod.rs  template.rs
store-plugin-mqtt/: Cargo.toml
store-plugin-mqtt/src/: lib.rs
store-plugin-mqtt/src/api/: mod.rs
store-plugin-mqtt/src/proc/: mod.rs  mqtt_plugin.rs  template.rs
store-plugin-restapi/: Cargo.toml  README.md  README_zh.md
store-plugin-restapi/src/: lib.rs
store-plugin-restapi/src/api/: mod.rs
store-plugin-restapi/src/proc/: mod.rs  reqwest.rs  restapi_plugin.rs  template.rs
store-plugin-rhai/: Cargo.toml
store-plugin-rhai/src/: lib.rs
store-plugin-rhai/src/engine/: common.rs  date.rs  mod.rs  reqwest.rs  resolver.rs
store-plugin-weixin/: Cargo.toml
store-plugin-weixin/src/: lib.rs
store-plugin-weixin/src/api/: mod.rs
store-plugin-weixin/src/proc/: mod.rs  weixin_plugin.rs
(+1 files in other folders)
