[package]
name = "chimes-dbs-factory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# crate-type = ["dylib"]
crate-type = ["rlib"]

[dependencies]
substring.workspace = true
rbs.workspace = true
fastdate.workspace = true
bigdecimal = { version = "0.4", features = ["serde"] }
rbdc-sqlite = { version = "4.5", default-features = false, features = ["tls-native-tls"] }
rbdc-mysql = { version = "4.5", default-features = false, features = ["tls-native-tls"] }
rbdc-pg = { version = "4.5", default-features = false, features = ["tls-native-tls"] }
rbdc-mssql = { version = "4.5", default-features = false, features = ["tls-native-tls"] }
rbdc-tdengine = { version = "4.5", default-features = false, features = ["ws", "ws-tls-native-tls"] }
rbatis.workspace = true
rbdc = { version = "4.5", default-features = false, features = ["tls-native-tls"] }
