[package]
name = "chimes-starter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
url = "2.5.0"
clap = { version = "4.3", features = ["derive"] }
derivative = "2.2.0"
flume = "0.11.0"
itertools = "0.12"
log.workspace = true
regex = "1.8"
lazy_static.workspace = true
base64 = "0.21.0"
rand = "0.8.5"
fslock = "*"
ipc-channel = "*"
jsonpath-rust.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
simple_logger = { version = "4.2", features = ["stderr"] }
tokio.workspace = true
toml = "0.8.6"
substring.workspace = true
encoding_rs = "0.8.34"

[target.'cfg(windows)'.dependencies]
windows-service="0.6.0"
windows={ version="0.48.0", features = [ "Win32_Foundation", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Time", "Win32_System_ProcessStatus", "Win32_Networking_WinSock", "Win32_NetworkManagement_IpHelper", "Win32_System_SystemInformation","Win32_System_Diagnostics_Debug"]}

[target.'cfg(not(windows))'.dependencies]
libc = "*"
nix = { version = "*", features = ["default"] }
