[package]
name = "chimes-store-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lib]
# crate-type = ["dylib"]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
plugin = []

[dependencies]
anyhow.workspace = true
url = "2.5.0"
clap = { version = "4.3", features = ["derive"] }
derivative = "2.2.0"
futures-lite.workspace = true
num_cpus = "1.16"
itertools = "0.12"
log.workspace = true
rust-crypto = "0.2.36"
regex = "1.8"
lazy_static.workspace = true
rsa = "0.6.1"
base64 = "0.21.0"
rand = "0.8.5"
serde.workspace = true
serde_json.workspace = true
simple_logger = { version = "4.2", features = ["stderr"] }
tokio.workspace = true
toml = "0.8.6"
uuid = "*"
substring.workspace = true
chrono.workspace = true
async-std.workspace = true
rbs.workspace = true
rbatis.workspace = true
redis = { version = "0.25.4", features = ["tokio-comp", "cluster", "cluster-async", "r2d2", "serde_json"] }
r2d2 = "0.8.10"
once_cell = "1.16.0"
urlencoding = "2.1.0"
chimes-dbs-factory = "*"
salvo.workspace = true

