[package]
name = "chimes-store-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/salvo-oapi-macros/"

[lib]
proc-macro = true

[dependencies.proc-macro-crate]
version = ">= 2, <= 4"

[dependencies.proc-macro-error]
version = "1"

[dependencies.proc-macro2]
version = "1"

[dependencies.quote]
version = "1"

[dependencies.regex]
version = "1"


[dependencies.syn]
version = "2"
features = [
    "full",
    "extra-traits",
]


[lints.clippy]
future_not_send = "warn"
unwrap_used = "warn"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "deny"
unsafe_code = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "warn"
