[package]
name = "store-plugin-mqtt"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# crate-type = ["dylib"]
crate-type = ["rlib"]

[dependencies]
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
rbatis.workspace = true
paho-mqtt = "0.12"
jsonpath-rust.workspace = true
chimes-store-utils.workspace = true
chimes-store-core = { workspace = true, features=["plugin"]}
salvo.workspace = true

[profile.dev]
opt-level = 3
panic = 'abort'
